--- a/C++/C++.css
+++ b/C++/C++.css
@@ -46,3 +46,9 @@ body {
     padding: 25px;
     margin: 2px;
 }
+.box {
+    background-color: white;
+    padding: 0.01em 16px;
+    margin: 20px 0;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) !important;
+}
