--- a/index.css
+++ b/index.css
@@ -55,7 +55,18 @@ label {
         margin-right: 3px;
         background: radial-gradient(ellipse at center, #CCC 50%, transparent 50%);
     }
-
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
 #expand {
     height: 0px;
     overflow: hidden;
@@ -202,4 +213,10 @@ label {
     padding: 2px 16px;
     background-color: #5cb85c;
     color: white;
+}
+.box {
+    background-color: white;
+    padding: 0.01em 16px;
+    margin: 20px 0;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) !important;
 }
